--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "fbjs": "^3.0.0",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-pager-view": "^5.3.0",
     "react-native-reanimated": "1.0.0",
     "react-native-safe-area-context": "^3.2.0",
